[Version 1.3.1 Minor]

Fixed:
- Crashing when game attempts to spawn new update mobs