@@ -1,4 +1,7 @@
 [Version 1.3.1 Minor]
 
-Fixed:
-- Crashing when game attempts to spawn new update mobs
+Check:
+- Architect / wrong skin, check store and recruitment stuff
+- Traveling Merchant / works
+- CannonBall Trap / double textures
+- Check recipes / devise a new implementation
